# LampWick

./: .gitignore  README.md  main.py  pyproject.toml
MainWindow/: MainWindow.py  MainWindow.ui  ui_MainWindow.py
MainWindow/Monitor/: HandleOverlay.py  Monitor.py  Monitor.ui  ui_Monitor.py
